# SHAPE

./: .gitattributes  .gitignore  251023_FB_inference_proTAC_plate_4_5.py  251031_CO_inference_Mydgf.py  251221_Training_ssup_FBaging_loadbywell_A4H9.py  260113_Training_dinov3_CO_screen.py  CHANGELOG_SEGMENTATION_TOOLS.md  DEPLOY_EXISTING_SPACE.md  DEPLOY_TO_HF_SPACES.md  FILE_STRUCTURE_DOCUMENTATION.md  IMAGE_ID_FLOW.md  MODEL_UPLOAD_GUIDE.md  MULTI_IMAGE_PROCESSING.md  Methods_Section.md  QUICK_DEPLOY.md  README.md  README_ARCHITECTURE.md  SECURITY.md  SYSTEM_AUDIT_REPORT.md  TOOL_PRIORITY_SYSTEM.md  app.py  app_bak_0215.py  app_v2_0216.py  app_v3_0216.py  deploy.ps1  deploy_to_existing_space.ps1  example.py  model_configs.py  push_to_space.ps1  pyproject.toml  requirements.txt  test_installation.py  utils.py
demo_solver_cache/20250217_062225_8ce3e482/: user_feedback.json
demo_solver_cache/20250217_063316_09285db1/: user_feedback.json
demo_solver_cache/20250217_183323_b0e58b32/: user_feedback.json
docs/: ARCHITECTURE.md  ARCHITECTURE_OPTIMIZATION_PROPOSAL.md  ARCHITECTURE_REFACTORING_SUMMARY.md  COMPLETE_LOGIC_VERIFICATION.md  DESIGN_PHILOSOPHY.md  FINAL_VERIFICATION_SUMMARY.md  GLOBAL_OPTIMIZATION_PLAN.md  IMPROVEMENT_VERIFICATION_REPORT.md  LOGIC_VERIFICATION_CROP_NAMING.md  MULTI_CHANNEL_CROP_VERIFICATION.md  MULTI_CHANNEL_PIPELINE_VERIFICATION.md  ORGANOID_ILLUMINATION_CORRECTION_FIX.md  PHASE3_PLANNING_OPTIMIZATION.md  PLANNER_LOGIC_OVERVIEW.md  SYSTEM_OPTIMIZATION_PLAN.md  multi_channel_image_processing_guide.md
examples/: A3_5_merged_2ch.tif  Baseline_fc_1.tiff  Baseline_fc_2.tiff  Baseline_fc_3.tiff  Baseline_fc_4.tiff  README.md  basic_usage.py  bs_E2.tiff  bs_E3.tiff  bs_E4.tiff  d10_E2.tiff  d10_E3.tiff  d10_E4.tiff  d12_E2.tiff  d12_E3.tiff  d12_E4.tiff  d16_E2.tiff  d16_E3.tiff  d16_E4.tiff  d2_E2.tiff  d2_E3.tiff  d2_E4.tiff  d2_fc_1.tiff  d2_fc_2.tiff  d2_fc_3.tiff  d2_fc_4.tiff  d4_E2.tiff  d4_E3.tiff  d4_E4.tiff  d4_fc_1.tiff  d4_fc_2.tiff  d4_fc_3.tiff  d4_fc_4.tiff  d6_E2.tiff  d6_E3.tiff  d6_E4.tiff  d6_fc_1.tiff  d6_fc_2.tiff  d6_fc_3.tiff  d6_fc_4.tiff  (+5 more)
feedback_dataset/: feedback-20250217_212401.json
hf_space/: README.md
llm_evaluation_scripts/: HUGGING_FACE_EVALUATION_GUIDE.md  README.md  hf_evaluation_framework.py  hf_model_configs.py  hf_quick_start.py  hf_requirements.txt  hf_requirements_minimal.txt  model_configs.py  run_evaluation.py  run_hf_evaluation.py  test_suite.json  visualize_results.py
octotools/: __init__.py
octotools/engine/: base.py  openai.py
octotools/models/: __init__.py  executor.py  (+9 more)
opentools/: setup.py
shape/: __init__.py  solver.py
tests/: test_cell_state_analyzer_enforcement.py  test_comprehensive_improvements.py  test_image_data.py  test_phase1_unified_abstraction.py  test_phase2_refactored_tools.py  test_phase2_tool_integration.py
(+123 files in other folders)
